# finances

./: .gitignore  README.md  pyproject.toml  requirements-lint.txt  requirements-test.txt  setup.cfg
.github/workflows/: ci.yml
scripts/: autoformat.sh  lint.sh  test.sh  venv.sh
src/finances/: __init__.py  __main__.py  earnings.py  metadata.py  money.py  utilities.py  value.py
src/finances/tax/: __init__.py  bracket.py  composite.py  flat.py  maximum.py  tax.py
src/finances/tax/federal/: __init__.py  data.py  fica.py  income.py  status.py
src/finances/tax/state/: __init__.py
src/finances/tax/state/mi/: __init__.py  data.py  income.py
src/finances/utilities/: __init__.py  protocols.py  range.py
src/simulate/: __init__.py  __main__.py  account.py  distribution.py  errors.py  growth.py  probability.py  simulation.py
src/simulate/distribution/: __init__.py  constant.py  distribution.py
test/: test_account.py  test_distribution.py  test_earnings.py  test_growth.py  test_money.py  test_probability.py  test_range.py
tests/: test_earnings.py
