[metadata]
name = thomasebsmith-finances
version = attr: finances.__version__
author = Thomas Smith
description = Finance utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomasebsmith/finances
project_urls =
  Bug Tracker = https://github.com/thomasebsmith/finances/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
  finances = finances.__main__:main

[options.packages.find]
where = src

[pylint.BASIC]
good-names =
  of,

[pylint.MESSAGES CONTROL]
disable =
  no-else-return,
  too-few-public-methods,
