[metadata]
name = thomasebsmith-finances
version = attr: finances.__version__
author = Thomas Smith
description = Finance and financial simulation utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomasebsmith/finances
project_urls =
  Bug Tracker = https://github.com/thomasebsmith/finances/issues
classifiers =
  License :: OSI Approved :: MIT License
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  Environment :: Console
license = MIT
license_files = LICENSE

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
  finances = finances.__main__:main
  simulate = simulate.__main__:main

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[pylint.BASIC]
good-names =
  of,

[pylint.MESSAGES CONTROL]
disable =
  no-else-return,
  too-few-public-methods,

[mypy]
python_version = 3.8
disallow_any_expr = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_return_any = True
